[package]
name = "alloy-monad-evm"
description = "Monad EVM implementation"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
alloy-evm.workspace = true
alloy-primitives.workspace = true
revm.workspace = true
monad-revm.workspace = true

[dev-dependencies]
test-case.workspace = true

[features]
default = ["std"]
std = [
    "alloy-primitives/std",
    "revm/std",
    "alloy-evm/std",
]
asm-keccak = ["alloy-evm/asm-keccak", "alloy-primitives/asm-keccak", "revm/asm-keccak"]
monad-revm = ["monad-revm/alloy-evm"]